Fix layout bug

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
   padding: 0;
   margin: 0;
 }
+
 h3 {
   color: green;
   font-size: 2rem;
@@ -38,5 +39,11 @@ p {
 
 div {
   border: 2px solid black;
+}
+.green {
+  color: green;
+}
+.tester {
+  border: 2px solid red;
 }
 /* media */
